# statgram

./: __init__.py  pyproject.toml
.github/workflows/: publish.yml
statgram/: core_requests.py  main.py  schemas.py
statgram.egg-info/: PKG-INFO
